src/snapshots/thndrs__ui__tests__search_started_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││ ▌ User (owais)     search for rust async patterns      │"
"│ ● scratch          ││                                                        │"
"│                    ││tool            ⠋ web_search#search-0 [running]  query: │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ⠋  running tool   ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋  █                                                                          "
"  running tool… esc to cancel  target: follow-up  steering: 0  follow-up: 0  Ctr"
" model: umans-coder   search: auto  cwd: .                                      "
