src/snapshots/thndrs__ui__tests__shell_failure_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌session-20260701-120000───────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     run cargo build                                           │"
"│                                                                              │"
"│tool            ✕ run_shell#0 [failed]  program: cargo                        │"
"│   │ $ cargo build [one-shot failed 340ms]                                    │"
"│   │ ── stderr ──                                                             │"
"│   │ error[E0308]: mismatched types                                           │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  ▏                                                                          "
"                                                                                "
" ✕ failed   model: umans-coder   search: auto   tok: ↑0 ↓0  cwd: /repo          "
