src/snapshots/thndrs__ui__tests__shell_output_highlight_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"                                                                                "
"  tool                                                                          "
"  ✓ run_shell#0 [ok]  program: echo                                             "
"     │ hello                                                                    "
"                                                                                "
"                                                                                "
"  session-20260701-120000  ✓ done                                               "
"  ›  ▏                                                                          "
"                                                                                "
"                                                                                "
"  model: umans-coder   search: auto   tok: ↑0 ↓0   cwd: /repo                   "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
"                                                                                "
