src/snapshots/thndrs__ui__tests__shell_running_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││ ▌ User (owais)     run cargo test                      │"
"│ ● scratch          ││                                                        │"
"│                    ││tool            ⠋ run_shell#0 [running]  program: cargo │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ⠋  running tool   ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋                                                                             "
"  running tool… esc to cancel                                                   "
" model: umans-coder   search: native  cwd: .                                    "
