src/snapshots/thndrs__ui__tests__shell_success_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││ ▌ User (owais)     run cargo test                      │"
"│ ● scratch          ││                                                        │"
"│                    ││tool            ✓ run_shell#0 [ok]  program: cargo      │"
"│                    ││   │ $ cargo test [one-shot ok 120ms]                   │"
"│                    ││   │ ── stdout ──                                       │"
"│                    ││   │ running 3 tests                                    │"
"│                    ││   │ test result: ok. 3 passed; 0 failed                │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" model: umans-coder   search: auto  cwd: .                                      "
