src/snapshots/thndrs__ui__tests__shell_timeout_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││▌  User (owais)  run a long build                       │"
"│ ● scratch          ││                                                        │"
"│                    ││tool                       ✕ run_shell#0 [failed]  progr│"
"│                    ││                           │ $ cargo build [one-shot tim│"
"│                    ││                           │ ── stderr ──               │"
"│                    ││                           │ Compiling thndrs v0.1.0    │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✕  failed         ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ▌ ▶                                                                           "
"                                                            umans-coder  native "
" model: umans-coder   search: native  cwd: .                                    "
