src/snapshots/thndrs__ui__tests__sidebar_focused_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││                                                        │"
"│ ● scratch          ││                                                        │"
"│                    ││                                                        │"
"│                    ││   888    888                    888                    │"
"│                    ││   888    888                    888                    │"
"│                    ││   888    888                    888                    │"
"│                    ││   888888 88888b.  88888b.   .d88888 888d888 .d8888b    │"
"│                    ││   888    888 "88b 888 "88b d88" 888 888P"   88K        │"
"│                    ││   888    888  888 888  888 888  888 888     "Y8888b.   │"
"│                    ││   Y88b.  888  888 888  888 Y88b 888 888          X88   │"
"│                    ││   "Y888  888  888 888  888  "Y88888 888      88888P'   │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ↑↓ navigate  enter││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ▌ ▶                                                                           "
"                                                            umans-coder  native "
" model: umans-coder   search: native  cwd: .                                    "
