src/snapshots/thndrs__ui__tests__streaming_assistant_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌session-20260701-120000───────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     explain this repo                                         │"
"│                                                                              │"
"│⠋               This is a fake streaming res...                               │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ⠋  █                                                                          "
"  target: follow-up  queued: 0/0  Ctrl+T toggles                                "
" ⠋ streaming   model: umans-coder   search: auto   tok: 0/0   max: 32768  cwd: ."
