src/snapshots/thndrs__ui__tests__successful_tool_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌thndrs──────────────┐┌Transcript──────────────────────────────────────────────┐"
"│Sessions            ││User (owais)               list files in src            │"
"│ ● scratch          ││ tool  ✓ find_files#0 [ok]  pattern: *.rs               │"
"│                    ││      │ src/main.rs                                     │"
"│                    ││      │ src/cli.rs                                      │"
"│                    ││      │ src/app.rs                                      │"
"│                    ││      │ src/ui.rs                                       │"
"│                    ││      │ src/agent.rs                                    │"
"│                    ││      │ src/context.rs                                  │"
"│                    ││      │ …(1 more lines)                                 │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│                    ││                                                        │"
"│  ✓  done           ││                                                        │"
"│                    ││                                                        │"
"└────────────────────┘└────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ▌ ▶                                                                           "
" model: umans-coder   search: native  cwd: .                                    "
