src/snapshots/thndrs__ui__tests__tool_output_truncation_snapshot_80x24.snap
---
source: src/ui.rs
expression: terminal.backend().to_string()
---
"┌Transcript────────────────────────────────────────────────────────────────────┐"
"│ ▌ User (owais)     list all files                                            │"
"│                                                                              │"
"│tool            ✓ find_files#0 [ok]  pattern: *.rs                            │"
"│   │ src/file_0.rs                                                            │"
"│   │ src/file_1.rs                                                            │"
"│   │ src/file_2.rs                                                            │"
"│   │ src/file_3.rs                                                            │"
"│   │ src/file_4.rs                                                            │"
"│   │ src/file_5.rs                                                            │"
"│   │ …(6 more lines)                                                          │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"────────────────────────────────────────────────────────────────────────────────"
"  ›  █                                                                          "
"                                                                                "
" ✓ done   model: umans-coder   search: auto   tok: 0/0   max: 32768  cwd: .     "
